# dicompyler

./: .pre-commit-config.yaml  README.md  dicompyler_app.py  distribute_setup.py  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/: dependabot.yaml
.github/workflows/: build.yml  main.yml
dicompyler/: __init__.py  dicomgui.py  dvhdata.py  guidvh.py  guiutil.py  main.py  plugin.py  preferences.py  util.py  wxmpl.py
dicompyler/baseplugins/: 2dview.py  2dview.xrc  anonymize.py  dvh.py  dvh.xrc  quickopen.py  treeview.py
dicompyler/resources/: plugin.xrc
scripts/: dicompyler
