[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dicompyler"
version = "0.5.0"
authors = [{name = "Aditya Panchal", email = "apanchal@bastula.org"}]
license = {text = "BSD License"}
description = "Extensible radiation therapy research platform and viewer for DICOM and DICOM RT."
keywords = [
    "radiation",
    "therapy",
    "research",
    "python",
    "dicom",
    "dicom-rt",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
urls = {Homepage = "https://github.com/bastula/dicompyler/"}
requires-python = ">=3.7"
dependencies = [
    "dicompyler-core>=0.5.2",
    "legacycontour@git+https://github.com/matplotlib/legacycontour.git@4b2ad15dbcbe730db9e0e3692dfde06fd3ebcd69",
    "matplotlib>=2.2,<3.8",
    "numpy>=1.2.1",
    "pillow>=1.0",
    "pydicom>=2.2,<3",
    "Pypubsub>=4.0",
    "wxPython>=4.0.0b2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
dicompyler = "dicompyler.main:start"

[tool.setuptools]
zip-safe = false
include-package-data = true
#dependency-links = []

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
dicompyler = [
    "*.txt",
    "baseplugins/*.py",
    "baseplugins/*.xrc",
]
