[tool.poetry]
name = "dicompyler"
version = "0.5.0"
authors = ["Aditya Panchal <apanchal@bastula.org>"]
license = "BSD License"
description = "Extensible radiation therapy research platform and viewer for DICOM and DICOM RT."
readme = "README.md"
keywords = [
    "radiation",
    "therapy",
    "research",
    "python",
    "dicom",
    "dicom-rt",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
homepage = "https://github.com/bastula/dicompyler/"

[tool.poetry.dependencies]
python = "^3.8"
dicompyler-core= "^0.5.2"
legacycontour = {git = "https://github.com/matplotlib/legacycontour.git", rev = "4b2ad15dbcbe730db9e0e3692dfde06fd3ebcd69"}
matplotlib= ">=3.7.2"
numpy= "^1.2.1"
Pillow= "^10.0"
pydicom= ">=2.2,<3"
Pypubsub= "^4.0"
wxPython= "^4.0.0b2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
poetry = "^1.5"
isort = "^5.0.1"
flynt = "<0.78,>=0.76"

[tool.poetry.scripts]
dicompyler = "dicompyler.main:start"

[tool.black]
skip-string-normalization = false
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.autopep8]
ignore = "E203"
max-line-length = 88
aggressive = 1

[tool.isort]
profile = "black"

[tool.pyupgrade]
py37plus = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
